--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
   <head>
-
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <meta charset="UTF-8" />
 
     <title>Nuit de l'info 2022 🙂 </title>
